syntax = "proto3";

package compliance;

import "google/protobuf/timestamp.proto";
import "storage/compliance.proto";

option go_package = "./internalapi/compliance;compliance";
option java_package = "io.stackrox.proto.compliance";

// Next Available Tag: 2
message GZIPDataChunk {
  bytes gzip = 1;
}

// Next Available Tag: 8
message File {
  string path = 1;
  uint32 user = 2;
  string user_name = 3;
  uint32 group = 4;
  string group_name = 5;
  uint32 permissions = 6;
  bytes content = 7;
  bool is_dir = 8;
  repeated File children = 9;
}

// Next Available Tag: 3
message CommandLine {
  string process = 1;

  message Args {
    string key = 1;
    repeated string values = 2;
    File file = 3; // This will be set if it looks like the value defines a file and we found the file
  }
  repeated Args args = 2;
}

message InsecureRegistriesConfig {
  repeated string insecure_registries = 1;
  repeated string insecure_cidrs = 2;
}

message ContainerRuntimeInfo {
  InsecureRegistriesConfig insecure_registries = 1;
}

message ComplianceStandardResult {
  map<string, storage.ComplianceResultValue> node_check_results = 1;
  map<string, storage.ComplianceResultValue> cluster_check_results = 2;
}

// Next Available Tag: 11
message ComplianceReturn {
  string node_name = 1;
  string scrape_id = 2;

  GZIPDataChunk docker_data = 3;
  map<string, CommandLine> command_lines = 4;
  map<string, File> files = 5;
  map<string, File> systemd_files = 6;

  ContainerRuntimeInfo container_runtime_info = 9;

  google.protobuf.Timestamp time = 7;

  GZIPDataChunk evidence = 10;
}
